# zpilot

./: .coverage  .gitignore  DESIGN.md  README.md  pyproject.toml
docs/: index.html
src/zpilot/: __init__.py  annotations.py  card_render.py  cli.py  config.py  daemon.py  detector.py  devtunnel.py  events.py  flows.py  keys.py  mcp_http.py  mcp_server.py  mesh.py  models.py  monitor.py  nodes.py  notifications.py  ops.py  security.py  shell_wrapper.py  thumbnail.py  transport.py  zellij.py
src/zpilot/tui/: dashboard.py  flow_render.py
src/zpilot/web/: app.py
src/zpilot/web/templates/: index.html
tests/: conftest.py  test_browser.py  test_cli.py  test_cli_runner.py  test_daemon.py  test_dashboard.py  test_detector.py  test_devtunnel.py  test_e2e.py  test_e2e_interaction.py  test_events.py  test_install_plugin.py  test_mcp.py  test_mcp_http.py  test_models.py  test_monitor.py  test_monitor_extended.py  test_new_features.py  test_nodes.py  test_normalize.py  test_playwright.py  test_plugin_status.py  test_proxy_health.py  test_resilience.py  test_transport.py  test_web_api.py  test_web_endpoints.py  test_web_extended.py  test_zellij.py
zpilot-zellij-plugin/: Cargo.toml
zpilot-zellij-plugin/src/: lib.rs  main.rs
