[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zpilot"
version = "0.1.0"
description = "Mission control for AI coding sessions — Zellij MCP server, idle detection, notifications, and TUI dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
    "textual>=0.50",
    "httpx>=0.27",
]

[project.scripts]
zpilot = "zpilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zpilot"]
