[package]
name = "zpilot-zellij-plugin"
version = "0.1.0"
edition = "2021"
description = "Zellij WASM plugin for zpilot terminal orchestration"

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.41.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
